--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
-  "author": "Martijn Dierckx",
   "license": "GPL",
-  "name": "node-red-contrib-gardena-smart-mower",
+  "name": "@martijndierckx/node-red-contrib-gardena-smart-mower",
   "description": "Nodes for controlling/monitoring Gardena smart system mowers",
   "version": "0.0.1",
+  "author": {
+    "name": "Martijn Dierckx",
+    "url": "https://github.com/martijndierckx"
+},
   "node-red": {
     "version": ">=2.2.0",
     "nodes": {
